<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.github_pull_list.view.GithubPullListActivity"
        android:padding="16dp">


    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRepoOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/repoOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#000"
                android:inputType="text"
                android:textStyle="italic"
                android:hint="@string/hint_repo_owner"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRepoName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilRepoOwner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/repoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#000"
                android:textStyle="italic"
                android:inputType="text"
                android:hint="@string/hint_repo_name"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tilRepoName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onClick"
            android:layout_marginTop="16dp"
            android:textColor="#000"
            android:text="@string/btn_text"/>

    <TextView
            android:id="@+id/labelGithubPullList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnSearch"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/github_open_pull_list"
    />
    <android.support.v7.widget.RecyclerView
            android:id="@+id/repoPullList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelGithubPullList"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="21sp"
            android:visibility="gone"
            android:text="@string/no_records_found"/>

</android.support.constraint.ConstraintLayout>